--- a/carne.html
+++ b/carne.html
@@ -62,7 +62,7 @@
             <div class="container">
                 <br>
                 <br>
-                <h6><span class="typed"></span></h6>
+                <h6><span class="Otyped"></span></h6>
                 <br>
             </div>
         </div>
@@ -76,11 +76,11 @@
             <div class="Ohamburguesa col-md-4">
                 <div id="Oc-slider">
                     <div id="Oslider">
-                        <section><img src="" alt="carne a la plancha"></section>
+                        <section><img src="img/carnes/alaPlancha.jpg" alt="carne a la plancha"></section>
                         <section><img src="img/carnes/chatas.jpg" alt="chatas"></section>
                         <section><img src="img/carnes/pechugaGrille.jpg" alt="pechugaGrille"></section>
-                        <section><img src="img/carnes/" alt="pechuga a la plancha"></section>
-                        <section><img src="img/carnes/" alt="pechuga gratinada"></section>
+                        <section><img src="img/carnes/pechugaPlancha.jpg" alt="pechuga a la plancha"></section>
+                        <section><img src="img/carnes/pechugaGratinada.jpg" alt="pechuga gratinada"></section>
                         <section><img src="img/carnes/pechugaEnChampi.jpg" alt="especialChampiñones"></section>
                         <section><img src="img/carnes/costillasCerdo.jpg" alt="costillas de cerdo"></section>
                         <section><img src="img/carnes/carneGrille.jpg" alt="doblecarneChorizo"></section>
@@ -98,32 +98,32 @@
                 <div id="Oparrafo-slider">
                     <div id="OparrafoSider">
                         <section>
-                            <p>CARNE A LA GRILLE: <br> Rodajas de Carne de res, Cebolla Grille & Papa Francesa</p>
+                            <p><h1 class="parrafoP">CARNE A LA GRILLE:</h1> Rodajas de Carne de res, Cebolla Grille & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p>
                         </section>
                         <section>
-                            <p>CARNE A LA PLANCHA: <br> Filete de Carne de res, Ensalada & Papa Francesa</p>
+                            <p><h1 class="parrafoP">CARNE A LA PLANCHA:</h1> Filete de Carne de res, Ensalada & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p>
                         </section>
                         <section>
-                            <p>CHATAS: <br> Carne en Mariposa 350grs, Arepa Santandereana, Cebollitas & Papa Francesa
-                            </p>
+                            <p><h1 class="parrafoP">CHATAS:</h1> Carne en Mariposa 350grs, Arepa Santandereana, Cebollitas & Papa Francesa
+                                <br><br><p class="precios">llevelo por solo:</p></p>
                         </section>
                         <section>
-                            <p>PECHUGA A LA GRILLE: <br> Rodajas de Carne de Pechuga a la Plancha, Cebolla Grille & Papa
+                            <p><h1 class="parrafoP">PECHUGA GRILLE:</h1> Rodajas de Carne de Pechuga a la Plancha, Cebolla Grille & Papa
+                                Francesa <br><br><p class="precios">llevelo por solo:</p></p>
+                        </section>
+                        <section>
+                            <p><h1 class="parrafoP">PECHUGA A LA PLANCHA:</h1>  Filete de Pechuga, Ensalada & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p>
+                        </section>
+                        <section>
+                            <p><h1 class="parrafoP">PECHUGA GRATINADA:</h1> Filete de Pechuga, Tocineta, Queso Gratinado, Ensalada & Papa
+                                Francesa <br><br><p class="precios">llevelo por solo:</p></p>
+                        </section>
+                        <section>
+                            <p><h1 class="parrafoP">ESPECIAL EN CHAMPIÑONES:</h1>  Filete de Pechuga bañado en crema de Champiñones & Papa
                                 Francesa</p>
                         </section>
                         <section>
-                            <p>PECHUGA A LA PLANCHA: <br> Filete de Pechuga, Ensalada & Papa Francesa</p>
-                        </section>
-                        <section>
-                            <p>PECHUGA GRATINADA: <br> Filete de Pechuga, Tocineta, Queso Gratinado, Ensalada & Papa
-                                Francesa</p>
-                        </section>
-                        <section>
-                            <p>ESPECIAL EN CHAMPIÑONES: <br> Filete de Pechuga bañado en crema de Champiñones & Papa
-                                Francesa</p>
-                        </section>
-                        <section>
-                            <p>COSTILLAS DE CERDO: <br> Costillas en Salsa B.B.Q, Ensalada & Papa Francesa</p>
+                            <p><h1 class="parrafoP">COSTILLAS DE CERDO:</h1> Costillas en Salsa B.B.Q, Ensalada & Papa Francesa</p>
                         </section>
 
                     </div>
