--- a/otros.html
+++ b/otros.html
@@ -60,7 +60,7 @@
             <div class="container">
                 <br>
                 <br>
-                <h6><span class="typed"></span></h6>
+                <h6><span class="Ptyped"></span></h6>
                 <br>
             </div>
         </div>
@@ -73,15 +73,15 @@
         <div class="Hhamburguesa col-md-4">          
             <div id="Hc-slider">
                 <div id="Hslider">                  
-                    <section><img src="img/hamburger/hamburgerAlitaspollo.jpg" alt="doblecarneChorizo"></section>
-                    <section><img src="img/hamburger/dobleCarnePechuga.jpg" alt="doblecarneChorizo"></section>
-                    <section><img src="img/otros/pataconDeLaCasa.jpg" alt="doblecarneChorizo"></section>
-                    <section><img src="img/hamburger/hamburChoDoble.jpg" alt="doblecarneChorizo"></section>
-                    <section><img src="" alt="doblecarneChorizo"></section>
-                    <section><img src="img/otros/desgranadoMixto.jpg" alt="gratinada"></section>
-                    <section><img src="img/hamburger/hamburgerAlitaspollo.jpg" alt="doblecarneChorizo"></section>
+                    <section><img src="img/papas/masorcada.jpg" alt="superMix"></section>
+                    <section><img src="img/otros/patacon.jpg" alt="patacon"></section>
+                    <section><img src="img/otros/pataconDeLaCasa.jpg" alt="pataconDeLaCasa"></section>
+                    <section><img src="img/otros/desgranado.jpg" alt="desgranado"></section>
+                    <section><img src="img/otros/desgranadoMixto.jpg" alt="desgranadoEspecial"></section>
+                    <section><img src="img/otros/desgranado.jpg" alt="desgranadoDeLaCasa"></section>
+                    <section><img src="img/otros/morrongo.jpg" alt="morrongo"></section>
                     <section><img src="img/otros/morrongoDeLaCasa.jpg" alt="doblecarneChorizo"></section>
-                    <section><img src="img/hamburger/hamburGratinada.jpg" alt="doblecarneChorizo"></section>
+                    <section><img src="img/otros/picada.jpg" alt="picadaEspecial"></section>
                 </div>
                 <div id="Hbtn-prev">&#60;</div>
                 <div id="Hbtn-next">&#62;</div>
@@ -94,15 +94,15 @@
             <h6>ingredientes</h6>
             <div id="Hparrafo-slider">
                 <div id="HparrafoSider">                   
-                    <section><p>PICADA ESPECIAL: <br> Carne, Pechuga, Salchicha Zenu & Papa Francesa</p></section>
-                    <section><p>SUPER MIX: <br> Salchicha, Chorizo, Cubitos de Carne, Pollo Desmechado, Bañado en Queso Gratinado & Papa Francesa</p></section>
-                    <section><p>PATACON: <br> Cubitos de Carne, Pollo Desmechado, Papa Triturada, Bañado en Queso Gratinado  & Cebolla Grille</p></section>
-                    <section><p>PATACON DE LA CASA: <br> Cubitos de Carne, Pollo Desmechado, Tocineta, Bañado en Queso Gratinado, Cebolla Grille & Papa Francesa</p></section>
-                    <section><p>DESGRANADO: <br> Maiz Tierno, Pollo Desmechado, Bañado en Queso Gratinado, & Queso Semisalado</p></section>
-                    <section><p>DESGRANADO DE LA CASA: <br> Maiz Tierno, Pollo Desmechado, Tocineta, Cabano, Queso doble Crema, Queso Semisalado & Papa Francesa</p></section>
-                    <section><p>DESGRANADO ESPECIAL: <br> Maiz Tierno, Cubitos de Pollo, Cubitos de Carne, Tocineta, Cabano, Bañado en Queso Gratinado, Triple Queso & Papa Francesa</p></section>
-                    <section><p>MORRONGO: <br> Cubitos de Carne y Pechuga, Chorizo, Salchicha, Bañado en Queso Gratinado & Papa Francesa</p></section>
-                    <section><p>MORRONGO DE LA CASA: <br>Cubitos de Carne y Pechuga, Pollo Desmechado, Chorizo, Salchicha, Bañado en Queso Gratinado & Papa Francesa</p></section>
+                    <section><p><h1 class="parrafoP">PICADA ESPECIAL:</h1> Carne, Pechuga, Salchicha Zenu & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">SUPER MIX:</h1>  Salchicha, Chorizo, Cubitos de Carne, Pollo Desmechado, Bañado en Queso Gratinado & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">PATACON:</h1>  Cubitos de Carne, Pollo Desmechado, Papa Triturada, Bañado en Queso Gratinado  & Cebolla Grille <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">PATACON DE LA CASA:</h1>  Cubitos de Carne, Pollo Desmechado, Tocineta, Bañado en Queso Gratinado, Cebolla Grille & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">DESGRANADO:</h1>  Maiz Tierno, Pollo Desmechado, Bañado en Queso Gratinado, & Queso Semisalado <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">DESGRANADO ESPECIAL:</h1>  Maiz Tierno, Cubitos de Pollo, Cubitos de Carne, Tocineta, Cabano, Bañado en Queso Gratinado, Triple Queso & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">DESGRANADO DE LA CASA:</h1>  Maiz Tierno, Pollo Desmechado, Tocineta, Cabano, Queso doble Crema, Queso Semisalado & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">MORRONGO:</h1>  Cubitos de Carne y Pechuga, Chorizo, Salchicha, Bañado en Queso Gratinado & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">MORRONGO DE LA CASA:</h1> Cubitos de Carne y Pechuga, Pollo Desmechado, Chorizo, Salchicha, Bañado en Queso Gratinado & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
                 </div>                
             </div>
         </div> 
