--- a/perros.html
+++ b/perros.html
@@ -62,7 +62,7 @@
             <div class="container">
                 <br>
                 <br>
-                <h6><span class="typed"></span></h6>
+                <h6><span class="Ctyped"></span></h6>
                 <br>
             </div>
         </div>
@@ -78,13 +78,13 @@
                     <section><img src="img/perros/perroSencillo.jpg" alt="gratinada"></section>
                     <section><img src="img/perros/hawaiano.jpg" alt="doblecarneChorizo"></section>
                     <section><img src="img/perros/choriperroEspecial.jpg" alt="choriperroespecial"></section>
-                    <section><img src="img/perros/perrogratinado.jpg" alt="americanoEspecial"></section>
+                    <section><img src="img/perros/choriperroEspecial.jpg" alt="americanoEspecial"></section>
                     <section><img src="img/perros/locoPerro.jpg" alt="doblecarneChorizo"></section>
                     <section><img src="img/perros/campesino.jpg" alt="campesino"></section>
-                    <section><img src="" alt="delacasa"></section>
+                    <section><img src="img/perros/deLaCasa.jpg" alt="delacasa"></section>
                     <section><img src="img/perros/Fucion.jpg" alt="fucion"></section>
                     <section><img src="img/perros/mexicano.jpg" alt="mexicano"></section>
-                    <section><img src="" alt="americano"></section>
+                    <section><img src="img/perros/perroSencillo.jpg" alt="americano"></section>
          
                     
                 </div>
@@ -99,16 +99,16 @@
             <h6>ingredientes</h6>
             <div id="Lparrafo-slider">
                 <div id="LparrafoSider">                  
-                    <section><p>PERRO AMERICANO: <br> Salchicha Americana, Jamon Ahumado, Queso doble Crema, Papa Triturada & Papa Francesa</p></section>
-                    <section><p>CHORIPERRO TRADICIONAL: <br> Chorizo, Jamon, Queso doble Crema, Papa Triturada & Papa Francesa</p></section>
-                    <section><p>PERRO HAWAIANO: <br> Salchicha Americana, Cubitos de Piña, Jamon Ahumado, Queso doble Crema, Papa Triturada & Papa Francesa</p></section>
-                    <section><p>CHORIPERRO ESPECIAL: <br> Chorizo, Pollo Desmechado, Queso doble Crema, Jamon Ahumado, Papa Triturada, Cebolla Grille & Papa Francesa</p></section>
-                    <section><p>PERRO AMERICANO ESPECIAL: <br> Salchicha Americana, Pollo Desmechado, Jamon Ahumado, Queso doble Crema, Papa Triturada, Cebolla & Papa Francesa</p></section>
-                    <section><p>PERRO LOCO: <br> Salchicha Americana, Cubitos de Pollo, Cubitos de Carne, Jamon, Queso doble Crema, Papa Triturada & Papa Francesa</p></section>
-                    <section><p>PERRO CAMPESINO: <br> Salchicha Americana, Pollo Desmechado, Maiz, Cabano, Trocitos de Jamon, Queso doble Crema, Papa Triturada & Papa Francesa</p></section>
-                    <section><p>PERRO DE LA CASA: <br> Salchicha Americana, Cubitos de Pollo, Cubitos de Carne, Cabano, Tosineta, Queso doble Crema, Jamon Ahumado, Papa Triturada, Cebolla Grille, & Papa Francesa</p></section>
-                    <section><p>PERRO FUSION: <br>Salchicha Americana, Cubitos de Pollo, Cubitos de Carne, Cabano, Tosineta, Maiz, Queso doble Crema, Bañado en Queso Gratinado, Papa Triturada, Cebolla Grille & Papa Francesa</p></section>
-                    <section><p>PERRO MEXICANO: <br> Salchicha Americana, Jalapeños apanados en queso cheddar, Cubitos de Carne, Cubitos de Pollo, Pico de Gallo, Bañado en Queso Gratinado, Papa Triturada & Papa Francesa</p></section>
+                    <section><p><h1 class="parrafoP">PERRO AMERICANO:</h1> Salchicha Americana, Jamon Ahumado, Queso doble Crema, Papa Triturada & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">CHORIPERRO : </h1> Chorizo, Jamon, Queso doble Crema, Papa Triturada & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">PERRO HAWAIANO: </h1> Salchicha Americana, Cubitos de Piña, Jamon Ahumado, Queso doble Crema, Papa Triturada & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">CHORIPERRO ESPECIAL: </h1> Chorizo, Pollo Desmechado, Queso doble Crema, Jamon Ahumado, Papa Triturada, Cebolla Grille & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">PERRO AMERICANO ESPECIAL: </h1> Salchicha Americana, Pollo Desmechado, Jamon Ahumado, Queso doble Crema, Papa Triturada, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">PERRO LOCO: </h1> Salchicha Americana, Cubitos de Pollo, Cubitos de Carne, Jamon, Queso doble Crema, Papa Triturada & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">PERRO CAMPESINO: </h1> Salchicha Americana, Pollo Desmechado, Maiz, Cabano, Trocitos de Jamon, Queso doble Crema, Papa Triturada & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">PERRO DE LA CASA: </h1> Salchicha Americana, Cubitos de Pollo, Cubitos de Carne, Cabano, Tosineta, Queso doble Crema, Jamon Ahumado, Papa Triturada, Cebolla Grille, & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">PERRO FUSION: </h1>Salchicha Americana, Cubitos de Pollo, Cubitos de Carne, Cabano, Tosineta, Maiz, Queso doble Crema, Bañado en Queso Gratinado, Papa Triturada, Cebolla Grille & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">PERRO MEXICANO: </h1> Salchicha Americana, Jalapeños apanados en queso cheddar, Cubitos de Carne, Cubitos de Pollo, Pico de Gallo, Bañado en Queso Gratinado, Papa Triturada & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
 
                 </div>                
             </div>
