--- a/hamburguesas.html
+++ b/hamburguesas.html
@@ -84,18 +84,18 @@
                      <section><img src="img/hamburger/americana.jpg" alt="americana"></section>
                      <section><img src="img/hamburger/dobleCarneEspecial.jpg" alt="dobleCarneEspecial"></section>
                      <section><img src="img/hamburger/choEspe.jpg" alt="choEspe"></section>
-                     <section><img src="" alt="americanaEspecial"></section>
+                     <section><img src="img/hamburger/americanaEspecial.jpg" alt="americanaEspecial"></section>
                      <section><img src="img/hamburger/indomableEspecial.jpg" alt="indomableEspecial"></section>
                      <section><img src="img/hamburger/campesina.jpg" alt="campesina"></section>
-                     <section><img src="" alt="indomable"></section>
-                     <section><img src="" alt="delacasa"></section>
+                     <section><img src="img/hamburger/indomable.jpg" alt="indomable"></section>
+                     <section><img src="img/hamburger/deLaCasa.jpg" alt="delacasa"></section>
                      <section><img src="img/hamburger/mexicana.jpg" alt="mexicana"></section>
-                     <section><img src="img/hamburger/champiñones.jpg" alt="champiñones"></section>
+                     <section><img src="img/hamburger/champi.jpg" alt="champiñones"></section>
                      <section><img src="img/hamburger/aros.jpg" alt="Aros"></section>
                      <section><img src="img/hamburger/arosEspecial.jpg" alt="arosEspecial"></section>
                      <section><img src="img/hamburger/laNuestra.jpg" alt="laNuestra"></section>
-                     <section><img src="" alt="cerdo"></section>
-                     <section><img src="" alt="fucion"></section>
+                     <section><img src="img/hamburger/cerdo.jpg" alt="cerdo"></section>
+                     <section><img src="img/hamburger/laNuestra.jpg" alt="fucion"></section>
                      <section><img src="img/hamburger/tradicional.jpg" alt="tradicional"></section>                    
                  </div>
                  <div id="btn-prev">&#60;</div>
@@ -109,27 +109,27 @@
              <h6>ingredientes</h6>
              <div id="parrafo-slider">
                  <div id="parrafoSider">
-                     <section><p>BURGER TRADICIONAL: <br> Carne, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>BURGER POLLO: <br> Filete de Pechuga, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>BURGER MIXTA: <br> Carne, Filete de Pechuga, Jamon, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>CHORI-BURGER: <br> Carne, Chorizo, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>BURGER DOBLE CARNE: <br> Doble Carne, Jamon, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>BURGER HAWAIANA: <br> Carne, Pollo desmechado, Encurtido de Pina, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>BURGER AMERICANA: <br> Carne, Salchicha Americana, Tocineta, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>BURGER DOBLE CARNE ESPECIAL: <br> Doble Carne,Filete de Pechuga, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>CHORI-BURGER ESPECIAL: <br> Carne, Chorizo, Filete de Pechuga, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>BURGER AMERICANA ESPECIAL: <br> Carne, Salchicha Americana, Filete de Pechuga, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>BURGER INDOMABLE ESPECIAL: <br> Triple Carne, Maiz, Tocineta, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>BURGER CAMPESINA: <br> Carne, Pollo Desmechado, Maiz Tierno, Tocineta, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>BURGER INDOMABLE: <br> Triple Carne, Doble Jamon Ahumado, Doble Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>BURGER DE LA CASA: <br> Doble Carne, Doble Filete de Pechuga, Doble Jamon Ahumado, Doble Queso Gratinado, Doble Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>BURGER MEXICANA: <br> Carne de res, Jalapenos apanados en queso chedar, Pico de gallo, Salteado en Pimenton, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>BURGER CHAMPINONES: <br> Carne de res, Crema de Champinones, Pollo Desmechado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>BURGER ARO: <br> Carne de res, Aros de Cebolla apanados, Salchicha Americana en resgo banada en salsa B.B.Q, Tosineta, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>BURGER ARO ESPECIAL: <br> Carne de res, Aros de cebolla apanados, Pollo Desmechado banado en salsa B.B.Q, Tosineta, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>BURGER LA NUESTRA: <br> Carne de res, Huevo frito, Pechuga, Tosineta banada en Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>BURGER CERDO: <br> Carne de res, Lomo de Cerdo, Pechuga banada en queso gratinado, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
-                     <section><p>BURGER FUSION: <br> 150Grs de Carne de res, Cubitos de lomo, Cubitos de pechuga, Rebanadas de Chorizo, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                     <section><p><h1 class="parrafoP">BURGER TRADICIONAL:</h1>  Carne, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">BURGER POLLO:</h1>  Filete de Pechuga, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">BURGER MIXTA:</h1>  Carne, Filete de Pechuga, Jamon, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">CHORI-BURGER:</h1>  Carne, Chorizo, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">BURGER DOBLE CARNE:</h1> Doble Carne, Jamon, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">BURGER HAWAIANA:</h1>  Carne, Pollo desmechado, Encurtido de Pina, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">BURGER AMERICANA:</h1>  Carne, Salchicha Americana, Tocineta, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">BURGER DOBLE CARNE ESPECIAL:</h1>  Doble Carne,Filete de Pechuga, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">CHORI-BURGER ESPECIAL:</h1>  Carne, Chorizo, Filete de Pechuga, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">BURGER AMERICANA ESPECIAL:</h1>  Carne, Salchicha Americana, Filete de Pechuga, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">BURGER INDOMABLE ESPECIAL: </h1> Triple Carne, Maiz, Tocineta, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">BURGER CAMPESINA:</h1>  Carne, Pollo Desmechado, Maiz Tierno, Tocineta, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">BURGER INDOMABLE:</h1>  Triple Carne, Doble Jamon Ahumado, Doble Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">BURGER DE LA CASA:</h1>  Doble Carne, Doble Filete de Pechuga, Doble Jamon Ahumado, Doble Queso Gratinado, Doble Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">BURGER MEXICANA: </h1> Carne de res, Jalapenos apanados en queso chedar, Pico de gallo, Salteado en Pimenton, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">BURGER CHAMPINONES: </h1> Carne de res, Crema de Champinones, Pollo Desmechado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">BURGER ARO: </h1> Carne de res, Aros de Cebolla apanados, Salchicha Americana en resgo banada en salsa B.B.Q, Tosineta, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">BURGER ARO ESPECIAL:</h1>  Carne de res, Aros de cebolla apanados, Pollo Desmechado banado en salsa B.B.Q, Tosineta, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">BURGER LA NUESTRA:</h1>  Carne de res, Huevo frito, Pechuga, Tosineta banada en Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">BURGER CERDO: </h1> Carne de res, Lomo de Cerdo, Pechuga banada en queso gratinado, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                     <section><p><h1 class="parrafoP">BURGER FUSION:</h1>  150Grs de Carne de res, Cubitos de lomo, Cubitos de pechuga, Rebanadas de Chorizo, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
  
                  </div>                
              </div>
