--- a/papasLocas.html
+++ b/papasLocas.html
@@ -60,7 +60,7 @@
             <div class="container">
                 <br>
                 <br>
-                <h6><span class="typed"></span></h6>
+                <h6><span class="Htyped"></span></h6>
                 <br>
             </div>
         </div>
@@ -73,10 +73,10 @@
         <div class="Chamburguesa col-md-4">          
             <div id="Cc-slider">
                 <div id="Cslider">                  
-                    <section><img src="" alt="salchipapaEspecial"></section>
+                    <section><img src="img/papas/salchipapaEspecial.jpg" alt="salchipapaEspecial"></section>
                     <section><img src="img/papas/choriTradicional.jpg" alt="choripapa"></section>
-                    <section><img src="" alt="choripapaEspecial"></section>
-                    <section><img src="img/papas/" alt="papasLocas"></section>
+                    <section><img src="img/papas/salchipapaEspecial.jpg" alt="choripapaEspecial"></section>
+                    <section><img src="img/papas/papasLocas.jpg" alt="papasLocas"></section>
                     <section><img src="img/papas/papasLocasCasa.jpg" alt="doblecarneChorizo"></section>
                     <section><img src="img/papas/salchiTradicional.jpg" alt="doblecarneChorizo"></section>
                     
@@ -93,12 +93,12 @@
             <div id="Cparrafo-slider">
                 <div id="CparrafoSider">
                    
-                    <section><p>SALCHIPAPA: <br> Salchicha Zenu, Queso Semisalado  & Papa Francesa</p></section>
-                    <section><p>SALCHIPAPA ESPECIAL: <br> Salchicha Zenu, Pollo Desmechado, Jamon Ahumado, Queso doble Crema, & Queso Semisalado</p></section>
-                    <section><p>CHORIPAPA: <br> Chorizo, Queso Semisalado & Papa Francesa</p></section>
-                    <section><p>CHORIPAPA ESPECIAL: <br> Chorizo, Pollo Desmechado, Jamon Ahumado, Queso doble Crema, Queso Semisalado & Papa Francesa</p></section>
-                    <section><p>PAPAS LOCAS: <br> Cubitos de Carne, Pollo Desmechado, Tosineta, Jamon Ahumado, Queso Gratinado & Papa Francesa</p></section>
-                    <section><p>PAPAS LOCAS DE LA CASA: <br> Carne de Hamburguesa, Pollo Desmechado, Tosineta, Maiz Tierno, Cabano, Queso Gratinado, Cebolla Grille & Papa Francesa</p></section>
+                    <section><p><h1 class="parrafoP">SALCHIPAPA:</h1> Salchicha Zenu, Queso Semisalado  & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">SALCHIPAPA ESPECIAL:</h1> Salchicha Zenu, Pollo Desmechado, Jamon Ahumado, Queso doble Crema, & Queso Semisalado<br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">CHORIPAPA: </h1> Chorizo, Queso Semisalado & Papa Francesa<br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">CHORIPAPA ESPECIAL:</h1> Chorizo, Pollo Desmechado, Jamon Ahumado, Queso doble Crema, Queso Semisalado & Papa Francesa<br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">PAPAS LOCAS:</h1> Cubitos de Carne, Pollo Desmechado, Tosineta, Jamon Ahumado, Queso Gratinado & Papa Francesa<br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">PAPAS LOCAS DE LA CASA: </h1> Carne de Hamburguesa, Pollo Desmechado, Tosineta, Maiz Tierno, Cabano, Queso Gratinado, Cebolla Grille & Papa Francesa<br><br><p class="precios">llevelo por solo:</p></p></section>
 
                 </div>                
             </div>
