--- a/index.html
+++ b/index.html
@@ -113,12 +113,10 @@
     <!-- Your Chat Plugin code -->
     <div class="fb-customerchat"
       attribution=setup_tool
-      page_id="116903156824610"
-theme_color="#0084ff"
-logged_in_greeting="pedido desde la web..."
-logged_out_greeting="pedido desde la web...">
+      page_id="2263101380582258"
+logged_in_greeting="hola como podemos ayudarte"
+logged_out_greeting="hola como podemos ayudarte">
     </div>
-
    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
    <script src="js/typed.js"></script>
    <script src="js/Ptyped.js"></script>
