--- a/carne.html
+++ b/carne.html
@@ -17,8 +17,8 @@
     <div class="row col-md-12">
         <div class="col-md-5" id="hamburger">
             <div class="row">
-                <h6 class="col-md-6"><img src="img/logo/logo2.jpg" alt="logoClasicBurger">
-                </h6>
+                <h6 class="col-md-6"><a href="./promociones.html"><img src="img/logo/logo2.jpg" alt="logoClasicBurger">
+                </a></h6>
                 <h3 class="col-md-1">
                     <div class="" id="redes-sociales">
                         <ul class="social-header list-inline text-right">
@@ -98,32 +98,32 @@
                 <div id="Oparrafo-slider">
                     <div id="OparrafoSider">
                         <section>
-                            <p><h1 class="parrafoP">CARNE A LA GRILLE:</h1> Rodajas de Carne de res, Cebolla Grille & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p>
+                            <p><h1 class="parrafoP">CARNE A LA GRILLE:</h1> Rodajas de Carne de res, Cebolla Grille & Papa Francesa <br><br><p class="precios">llevelo por solo: $14000</p></p>
                         </section>
                         <section>
-                            <p><h1 class="parrafoP">CARNE A LA PLANCHA:</h1> Filete de Carne de res, Ensalada & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p>
+                            <p><h1 class="parrafoP">CARNE A LA PLANCHA:</h1> Filete de Carne de res, Ensalada & Papa Francesa <br><br><p class="precios">llevelo por solo: $15000</p></p>
                         </section>
                         <section>
                             <p><h1 class="parrafoP">CHATAS:</h1> Carne en Mariposa 350grs, Arepa Santandereana, Cebollitas & Papa Francesa
-                                <br><br><p class="precios">llevelo por solo:</p></p>
+                                <br><br><p class="precios">llevelo por solo: $20000</p></p>
                         </section>
                         <section>
                             <p><h1 class="parrafoP">PECHUGA GRILLE:</h1> Rodajas de Carne de Pechuga a la Plancha, Cebolla Grille & Papa
-                                Francesa <br><br><p class="precios">llevelo por solo:</p></p>
+                                Francesa <br><br><p class="precios">llevelo por solo: $13000</p></p>
                         </section>
                         <section>
-                            <p><h1 class="parrafoP">PECHUGA A LA PLANCHA:</h1>  Filete de Pechuga, Ensalada & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p>
+                            <p><h1 class="parrafoP">PECHUGA A LA PLANCHA:</h1>  Filete de Pechuga, Ensalada & Papa Francesa <br><br><p class="precios">llevelo por solo: $14000</p></p>
                         </section>
                         <section>
                             <p><h1 class="parrafoP">PECHUGA GRATINADA:</h1> Filete de Pechuga, Tocineta, Queso Gratinado, Ensalada & Papa
-                                Francesa <br><br><p class="precios">llevelo por solo:</p></p>
+                                Francesa <br><br><p class="precios">llevelo por solo: $15000</p></p>
                         </section>
                         <section>
                             <p><h1 class="parrafoP">ESPECIAL EN CHAMPIÑONES:</h1>  Filete de Pechuga bañado en crema de Champiñones & Papa
-                                Francesa</p>
+                                Francesa <br><br><p class="precios">llevelo por solo: $17000</p></p>
                         </section>
                         <section>
-                            <p><h1 class="parrafoP">COSTILLAS DE CERDO:</h1> Costillas en Salsa B.B.Q, Ensalada & Papa Francesa</p>
+                            <p><h1 class="parrafoP">COSTILLAS DE CERDO:</h1> Costillas en Salsa B.B.Q, Ensalada & Papa Francesa <br><br><p class="precios">llevelo por solo: $16000</p></p>
                         </section>
 
                     </div>
