--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
     <!--  -->
     <div class="container">
         <video src="img/hamburger/sinAudio.mp4" autoplay loop class="fondo"></video>
-        <span class="boton">RESERVATION</span>
-
+        <a href="./promociones.html"><span class="boton">PROMOCIONES</span>
+        </a>
 
         <nav class="menu">
             <ul class="flex">
-                <li><a href="./otros.html"></a>OTROS</li>
-                <li><a href="./carne.html"></a>CARNES</li>
-                <li><a href="./papasLocas.html"></a>PAPAS LOCAS</li>
-                <li><a href="./perros.html"></a>PERROS</li>
-                <li><a href="./hamburguesas.html"></a>HAMBURGUESAS</li>
+                <li><a class="titulos" href="otros.html">OTROS</a></li>
+                <li><a class="titulos" href="./carne.html">CARNES</a></li>
+                <li><a class="titulos" href="./papasLocas.html">PAPAS LOCAS</a></li>
+                <li><a class="titulos" href="./perros.html">PERROS</a></li>
+                <li><a class="titulos" href="./hamburguesas.html">HAMBURGUESAS</a></li>
             </ul>
         </nav>
 
         <div class="box-info">
-            <h1>WELCOME TO</h1>
-            <h2>KAMIK DESIGN</h2>
+            <h1>BIENBENIDOS A</h1>
+            <h2>CLASSICBURGER.COM</h2>
             <div class="parrafo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ex qui quia deserunt similique facilis ea, unde neque illum ips</p>
+                <p>QUIENES SOMOS: <br> ClassicBurger es una empresa dedicada a la produccion y comercializacion de comidas rapidas gurmet, nuestro objetivo es brindar la mayor calidad en nuestros productos para a si lograr la entera satisfaccion de nuestros clientes y comensales</p>
             </div>
             <div class="redes-sociales">
-                <li class="fab fa-facebook flex"></li>
+               <a href="https://www.facebook.com/classicburger23/"><li class="fab fa-facebook flex"></li></a>
                 <li class="fab fa-twitter flex"></li>
                 <li class="fab fa-youtube flex"></li>
             </div>
