--- a/otros.html
+++ b/otros.html
@@ -15,7 +15,7 @@
         <div class="col-md-5" id="hamburger">
             <div class="container col-md-12">
               <div class="row">
-                <h6 class="col-md-6"><img src="img/logo/logo2.jpg" alt="logoClasicBurger">                               
+                <h6 class="col-md-6"><a href="./promociones.html"><img src="img/logo/logo2.jpg" alt="logoClasicBurger"></a>                               
                 </h6>
                 <h3 class="col-md-1">
                     <div class="" id="redes-sociales">
@@ -94,15 +94,15 @@
             <h6>ingredientes</h6>
             <div id="Hparrafo-slider">
                 <div id="HparrafoSider">                   
-                    <section><p><h1 class="parrafoP">PICADA ESPECIAL:</h1> Carne, Pechuga, Salchicha Zenu & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">SUPER MIX:</h1>  Salchicha, Chorizo, Cubitos de Carne, Pollo Desmechado, Bañado en Queso Gratinado & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">PATACON:</h1>  Cubitos de Carne, Pollo Desmechado, Papa Triturada, Bañado en Queso Gratinado  & Cebolla Grille <br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">PATACON DE LA CASA:</h1>  Cubitos de Carne, Pollo Desmechado, Tocineta, Bañado en Queso Gratinado, Cebolla Grille & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">DESGRANADO:</h1>  Maiz Tierno, Pollo Desmechado, Bañado en Queso Gratinado, & Queso Semisalado <br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">DESGRANADO ESPECIAL:</h1>  Maiz Tierno, Cubitos de Pollo, Cubitos de Carne, Tocineta, Cabano, Bañado en Queso Gratinado, Triple Queso & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">DESGRANADO DE LA CASA:</h1>  Maiz Tierno, Pollo Desmechado, Tocineta, Cabano, Queso doble Crema, Queso Semisalado & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">MORRONGO:</h1>  Cubitos de Carne y Pechuga, Chorizo, Salchicha, Bañado en Queso Gratinado & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">MORRONGO DE LA CASA:</h1> Cubitos de Carne y Pechuga, Pollo Desmechado, Chorizo, Salchicha, Bañado en Queso Gratinado & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">PICADA ESPECIAL:</h1> Carne, Pechuga, Salchicha Zenu & Papa Francesa <br><br><p class="precios">llevelo por solo: $18000 || $27000 || $35000</p></p></section>
+                    <section><p><h1 class="parrafoP">SUPER MIX:</h1>  Salchicha, Chorizo, Cubitos de Carne, Pollo Desmechado, Bañado en Queso Gratinado & Papa Francesa <br><br><p class="precios">llevelo por solo: $14000</p></p></section>
+                    <section><p><h1 class="parrafoP">PATACON:</h1>  Cubitos de Carne, Pollo Desmechado, Papa Triturada, Bañado en Queso Gratinado  & Cebolla Grille <br><br><p class="precios">llevelo por solo: $14000</p></p></section>
+                    <section><p><h1 class="parrafoP">PATACON DE LA CASA:</h1>  Cubitos de Carne, Pollo Desmechado, Tocineta, Bañado en Queso Gratinado, Cebolla Grille & Papa Francesa <br><br><p class="precios">llevelo por solo: $17000</p></p></section>
+                    <section><p><h1 class="parrafoP">DESGRANADO:</h1>  Maiz Tierno, Pollo Desmechado, Bañado en Queso Gratinado, & Queso Semisalado <br><br><p class="precios">llevelo por solo: $13000</p></p></section>
+                    <section><p><h1 class="parrafoP">DESGRANADO ESPECIAL:</h1>  Maiz Tierno, Cubitos de Pollo, Cubitos de Carne, Tocineta, Cabano, Bañado en Queso Gratinado, Triple Queso & Papa Francesa <br><br><p class="precios">llevelo por solo: $17000</p></p></section>
+                    <section><p><h1 class="parrafoP">DESGRANADO DE LA CASA:</h1>  Maiz Tierno, Pollo Desmechado, Tocineta, Cabano, Queso doble Crema, Queso Semisalado & Papa Francesa <br><br><p class="precios"> llevelo por solo: $17000</p></p></section>
+                    <section><p><h1 class="parrafoP">MORRONGO:</h1>  Cubitos de Carne y Pechuga, Chorizo, Salchicha, Bañado en Queso Gratinado & Papa Francesa <br><br><p class="precios">llevelo por solo: $14000</p></p></section>
+                    <section><p><h1 class="parrafoP">MORRONGO DE LA CASA:</h1> Cubitos de Carne y Pechuga, Pollo Desmechado, Chorizo, Salchicha, Bañado en Queso Gratinado & Papa Francesa <br><br><p class="precios">llevelo por solo: $18000</p></p></section>
                 </div>                
             </div>
         </div> 
