--- a/papasLocas.html
+++ b/papasLocas.html
@@ -15,7 +15,7 @@
         <div class="col-md-5" id="hamburger">
             <div class="container col-md-12">
               <div class="row">
-                <h6 class="col-md-6"><img src="img/logo/logo2.jpg" alt="logoClasicBurger">                               
+                <h6 class="col-md-6"><a href="./promociones.html"><img src="img/logo/logo2.jpg" alt="logoClasicBurger"></a>                               
                 </h6>
                 <h3 class="col-md-1">
                     <div class="" id="redes-sociales">
@@ -93,12 +93,12 @@
             <div id="Cparrafo-slider">
                 <div id="CparrafoSider">
                    
-                    <section><p><h1 class="parrafoP">SALCHIPAPA:</h1> Salchicha Zenu, Queso Semisalado  & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">SALCHIPAPA ESPECIAL:</h1> Salchicha Zenu, Pollo Desmechado, Jamon Ahumado, Queso doble Crema, & Queso Semisalado<br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">CHORIPAPA: </h1> Chorizo, Queso Semisalado & Papa Francesa<br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">CHORIPAPA ESPECIAL:</h1> Chorizo, Pollo Desmechado, Jamon Ahumado, Queso doble Crema, Queso Semisalado & Papa Francesa<br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">PAPAS LOCAS:</h1> Cubitos de Carne, Pollo Desmechado, Tosineta, Jamon Ahumado, Queso Gratinado & Papa Francesa<br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">PAPAS LOCAS DE LA CASA: </h1> Carne de Hamburguesa, Pollo Desmechado, Tosineta, Maiz Tierno, Cabano, Queso Gratinado, Cebolla Grille & Papa Francesa<br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">SALCHIPAPA:</h1> Salchicha Zenu, Queso Semisalado  & Papa Francesa <br><br><p class="precios">llevelo por solo: $8000</p></p></section>
+                    <section><p><h1 class="parrafoP">SALCHIPAPA ESPECIAL:</h1> Salchicha Zenu, Pollo Desmechado, Jamon Ahumado, Queso doble Crema, & Queso Semisalado<br><br><p class="precios">llevelo por solo: $12000</p></p></section>
+                    <section><p><h1 class="parrafoP">CHORIPAPA: </h1> Chorizo, Queso Semisalado & Papa Francesa<br><br><p class="precios">llevelo por solo: $8000</p></p></section>
+                    <section><p><h1 class="parrafoP">CHORIPAPA ESPECIAL:</h1> Chorizo, Pollo Desmechado, Jamon Ahumado, Queso doble Crema, Queso Semisalado & Papa Francesa<br><br><p class="precios">llevelo por solo: $12000</p></p></section>
+                    <section><p><h1 class="parrafoP">PAPAS LOCAS:</h1> Cubitos de Carne, Pollo Desmechado, Tosineta, Jamon Ahumado, Queso Gratinado & Papa Francesa<br><br><p class="precios">llevelo por solo: $14000</p></p></section>
+                    <section><p><h1 class="parrafoP">PAPAS LOCAS DE LA CASA: </h1> Carne de Hamburguesa, Pollo Desmechado, Tosineta, Maiz Tierno, Cabano, Queso Gratinado, Cebolla Grille & Papa Francesa<br><br><p class="precios">llevelo por solo: $18000</p></p></section>
 
                 </div>                
             </div>
