--- a/perros.html
+++ b/perros.html
@@ -17,7 +17,7 @@
         <div class="col-md-5" id="hamburger">
             <div class="container col-md-12">
               <div class="row">
-                <h6 class="col-md-6"><img src="img/logo/logo2.jpg" alt="logoClasicBurger">                               
+                <h6 class="col-md-6"><a href="./promociones.html"><img src="img/logo/logo2.jpg" alt="logoClasicBurger"></a>                               
                 </h6>
                 <h3 class="col-md-1">
                     <div class="" id="redes-sociales">
@@ -99,16 +99,16 @@
             <h6>ingredientes</h6>
             <div id="Lparrafo-slider">
                 <div id="LparrafoSider">                  
-                    <section><p><h1 class="parrafoP">PERRO AMERICANO:</h1> Salchicha Americana, Jamon Ahumado, Queso doble Crema, Papa Triturada & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">CHORIPERRO : </h1> Chorizo, Jamon, Queso doble Crema, Papa Triturada & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">PERRO HAWAIANO: </h1> Salchicha Americana, Cubitos de Piña, Jamon Ahumado, Queso doble Crema, Papa Triturada & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">CHORIPERRO ESPECIAL: </h1> Chorizo, Pollo Desmechado, Queso doble Crema, Jamon Ahumado, Papa Triturada, Cebolla Grille & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">PERRO AMERICANO ESPECIAL: </h1> Salchicha Americana, Pollo Desmechado, Jamon Ahumado, Queso doble Crema, Papa Triturada, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">PERRO LOCO: </h1> Salchicha Americana, Cubitos de Pollo, Cubitos de Carne, Jamon, Queso doble Crema, Papa Triturada & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">PERRO CAMPESINO: </h1> Salchicha Americana, Pollo Desmechado, Maiz, Cabano, Trocitos de Jamon, Queso doble Crema, Papa Triturada & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">PERRO DE LA CASA: </h1> Salchicha Americana, Cubitos de Pollo, Cubitos de Carne, Cabano, Tosineta, Queso doble Crema, Jamon Ahumado, Papa Triturada, Cebolla Grille, & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">PERRO FUSION: </h1>Salchicha Americana, Cubitos de Pollo, Cubitos de Carne, Cabano, Tosineta, Maiz, Queso doble Crema, Bañado en Queso Gratinado, Papa Triturada, Cebolla Grille & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
-                    <section><p><h1 class="parrafoP">PERRO MEXICANO: </h1> Salchicha Americana, Jalapeños apanados en queso cheddar, Cubitos de Carne, Cubitos de Pollo, Pico de Gallo, Bañado en Queso Gratinado, Papa Triturada & Papa Francesa <br><br><p class="precios">llevelo por solo:</p></p></section>
+                    <section><p><h1 class="parrafoP">PERRO AMERICANO:</h1> Salchicha Americana, Jamon Ahumado, Queso doble Crema, Papa Triturada & Papa Francesa <br><br><p class="precios">llevelo por solo: $9000</p></p></section>
+                    <section><p><h1 class="parrafoP">CHORIPERRO : </h1> Chorizo, Jamon, Queso doble Crema, Papa Triturada & Papa Francesa <br><br><p class="precios">llevelo por solo: $10000</p></p></section>
+                    <section><p><h1 class="parrafoP">PERRO HAWAIANO: </h1> Salchicha Americana, Cubitos de Piña, Jamon Ahumado, Queso doble Crema, Papa Triturada & Papa Francesa <br><br><p class="precios">llevelo por solo: $11000</p></p></section>
+                    <section><p><h1 class="parrafoP">CHORIPERRO ESPECIAL: </h1> Chorizo, Pollo Desmechado, Queso doble Crema, Jamon Ahumado, Papa Triturada, Cebolla Grille & Papa Francesa <br><br><p class="precios">llevelo por solo: $13000</p></p></section>
+                    <section><p><h1 class="parrafoP">PERRO AMERICANO ESPECIAL: </h1> Salchicha Americana, Pollo Desmechado, Jamon Ahumado, Queso doble Crema, Papa Triturada, Cebolla & Papa Francesa <br><br><p class="precios">llevelo por solo: $12000</p></p></section>
+                    <section><p><h1 class="parrafoP">PERRO LOCO: </h1> Salchicha Americana, Cubitos de Pollo, Cubitos de Carne, Jamon, Queso doble Crema, Papa Triturada & Papa Francesa <br><br><p class="precios">llevelo por solo: $14000</p></p></section>
+                    <section><p><h1 class="parrafoP">PERRO CAMPESINO: </h1> Salchicha Americana, Pollo Desmechado, Maiz, Cabano, Trocitos de Jamon, Queso doble Crema, Papa Triturada & Papa Francesa <br><br><p class="precios">llevelo por solo: $15000</p></p></section>
+                    <section><p><h1 class="parrafoP">PERRO DE LA CASA: </h1> Salchicha Americana, Cubitos de Pollo, Cubitos de Carne, Cabano, Tosineta, Queso doble Crema, Jamon Ahumado, Papa Triturada, Cebolla Grille, & Papa Francesa <br><br><p class="precios">llevelo por solo: $17000</p></p></section>
+                    <section><p><h1 class="parrafoP">PERRO FUSION: </h1>Salchicha Americana, Cubitos de Pollo, Cubitos de Carne, Cabano, Tosineta, Maiz, Queso doble Crema, Bañado en Queso Gratinado, Papa Triturada, Cebolla Grille & Papa Francesa <br><br><p class="precios">llevelo por solo: $17000</p></p></section>
+                    <section><p><h1 class="parrafoP">PERRO MEXICANO: </h1> Salchicha Americana, Jalapeños apanados en queso cheddar, Cubitos de Carne, Cubitos de Pollo, Pico de Gallo, Bañado en Queso Gratinado, Papa Triturada & Papa Francesa <br><br><p class="precios">llevelo por solo: $17000</p></p></section>
 
                 </div>                
             </div>
