--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
 
         <div class="box-info">
-            <h1>BIENBENIDOS A</h1>
+            <h1>BIENVENIDOS A</h1>
             <h2>CLASSICBURGER.COM</h2>
             <div class="parrafo">
                 <p>QUIENES SOMOS: <br> ClassicBurger es una empresa dedicada a la produccion y comercializacion de comidas rapidas gurmet, nuestro objetivo es brindar la mayor calidad en nuestros productos para a si lograr la entera satisfaccion de nuestros clientes y comensales</p>
@@ -38,28 +38,6 @@
                 <li class="fab fa-youtube flex"></li>
             </div>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     </div>
-    
-   
-
 </body>
 </html>
