--- a/carne.html
+++ b/carne.html
@@ -168,7 +168,7 @@
         </div>
     </div>
     <div class="footer">
-        francoDiseñosWeb derechos reservados
+         Copyright<font size=2>&copy</font>ClassicBurger23, Inc 2020-2021<a href="">@FrancoCreacionesWeb</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script src="js/typed.js"></script>
